Subiendo primera versión en inglés
Falta revisar gramática, poco tiempo

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Iván Quiñones</title>
 
     <link rel="canonical" href="http://mcclone2001.github.io">
+    <link rel="alternate" hreflang="en" href="http://mcclone2001.github.io/english.html" />
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
 
     <meta name="description" content="SCRUM Master Certificado. Líder de Equipos de Desarrollo de Software">
@@ -114,6 +115,7 @@
       .fa-sliders-h:before{content:"\f1de"}
       .fa-fist-raised:before{content:"\f6de"}
       .fa-user-circle:before{content:"\f2bd"}
+      .fa-language:before{content:"\f1ab"}
     </style>
     <script async custom-element="amp-carousel" src="https://cdn.ampproject.org/v0/amp-carousel-0.1.js"></script>
     <script async custom-element="amp-lightbox-gallery" src="https://cdn.ampproject.org/v0/amp-lightbox-gallery-0.1.js"></script>
@@ -130,6 +132,7 @@
             height="200">
           </amp-img>
         <h1 class="no-margin-vertical">Iván Quiñones</h1>
+        <a href="https://mcclone2001.github.io/english.html"><i class="fas fa-language"></i> English</a>
       </div>
       <div class="m--1 g--10 no-margin-vertical"><a href="#educacion">Educación</a></div>
       <div class="m--1 g--10 no-margin-vertical"><a href="#experiencia">Experiencia</a></div>
@@ -235,10 +238,9 @@
           <div class="tile bg--asphalt color--white">DRY</div>
           <div class="tile bg--midnight-blue color--white">KISS</div>
           <div class="tile bg--asphalt color--white">SOLID</div>
-          <div class="tile bg--midnight-blue color--white">FIRST</div>
-          <div class="tile bg--asphalt color--white">Microservices</div>
-          <div class="tile bg--midnight-blue color--white">YAGNI</div>
-          <div class="tile bg--asphalt color--white">DevOps</div>
+          <div class="tile bg--midnight-blue color--white">Microservices</div>
+          <div class="tile bg--asphalt color--white">YAGNI</div>
+          <div class="tile bg--midnight-blue color--white">DevOps</div>
         </div>
       </div>
 
@@ -390,8 +392,8 @@
             <div class="tile g--2 no-margin-vertical">Lean</div>
             <div class="tile g--2 no-margin-vertical">SOLID</div>
             <div class="tile g--2 no-margin-vertical">Microservices</div>
-            <div class="tile bg--midnight-blue color--white">YAGNI</div>
-            <div class="tile bg--asphalt color--white">DevOps</div>
+            <div class="tile g--2 no-margin-vertical">YAGNI</div>
+            <div class="tile g--2 no-margin-vertical">DevOps</div>
           </div>
         </div>
 
