Agregando skills de devops
Whops, terrible omisión

--- a/english.html
+++ b/english.html
@@ -226,6 +226,9 @@
           <div class="tile bg--asphalt color--white">SQL</div>
           <div class="tile bg--midnight-blue color--white">MariaDB</div>
           <div class="tile bg--asphalt color--white">REST</div>
+          <div class="tile bg--midnight-blue color--white">Jenkins</div>
+          <div class="tile bg--asphalt color--white">Ansible</div>
+          <div class="tile bg--midnight-blue color--white">Docker</div>
         </div>
       </div>
 
