--- a/english.html
+++ b/english.html
@@ -139,7 +139,7 @@
       <div class="m--1 g--10 no-margin-vertical"><a href="#herramientas">Tooling</a></div>
       <div class="m--1 g--10 no-margin-vertical"><a href="#metodologia">Methodology</a></div>
       <div class="m--1 g--10 no-margin-vertical"><a href="#personalidad">Traits of Personality</a></div>
-      <div class="m--1 g--10 no-margin-vertical"><a href="#alcance">¿What can he do?</a></div>
+      <div class="m--1 g--10 no-margin-vertical"><a href="#alcance">What can he do?</a></div>
       <div class="m--1 g--10 no-margin-vertical"><a href="#contacto">Contact Information</a></div>
     </aside>
 
@@ -178,8 +178,8 @@
           </div>
           <div class="g--8 g-s--12 nudge--left nudge--right no-nudge--s">
             <h3>Tourism Services Distribution Platform</h3>
-            <p>For a important tourism company in the mexican southwest</p>
-            <p>Leading 17 developers in site and remote</p>
+            <p>For an important tourism company in the mexican southeast</p>
+            <p>Leading 17 developers on site and remote</p>
           </div>
         </div>
         <div class="g--12 container container--wrap--s">
@@ -187,7 +187,7 @@
             2011 - 2016
           </div>
           <div class="g--8 g-s--12 nudge--left nudge--right no-nudge--s">
-            <h3>ERP inhouse to control warehouses, invenotires, POS, accounting, clients, etc.</h3>
+            <h3>ERP in-house to control warehouses, inventories, POS, accounting, clients, etc.</h3>
             <p>For "Comercializadora de Pinturas y Complementos", a Comex distribuitor in Chiapas</p>
             <p>Leading 5 developers</p>
           </div>
@@ -207,7 +207,7 @@
             2008
           </div>
           <div class="g--8 g-s--12 nudge--left nudge--right no-nudge--s">
-            <h3>Web portal to promote local bussinesses in Chiapas</h3>
+            <h3>Web portal to promote local businesses in Chiapas</h3>
             <p>For "Negotia Impulsora de Negocios"</p>
             <p>Leading 4 developers</p>
           </div>
@@ -263,7 +263,7 @@
             <h3>Creative</h3>
           </div>
           <div class="g--8 g-s--12 nudge--left nudge--right no-nudge--s">
-            <p>Creates new ideas or concepts, and new associations between known ideas and conceptos, wich usually get original solutions to the problems we are focusing in.</p>
+            <p>Creates new ideas or concepts, and new associations between known ideas and concepts, which usually get original solutions to the problems we are focusing on.</p>
           </div>
         </div>
         <div class="g--12 container container--wrap--s">
@@ -271,7 +271,7 @@
             <h3>Responsible</h3>
           </div>
           <div class="g--8 g-s--12 nudge--left nudge--right no-nudge--s">
-            <p>Reflects, manages, guides and ponders the consequenses of his actions, always in the bounds of morality</p>
+            <p>Reflects, manages, guides and ponders the consequences of his actions, always in the bounds of morality</p>
           </div>
         </div>
         <div class="g--12 container container--wrap--s">
@@ -279,7 +279,7 @@
             <h3>Collaborative</h3>
           </div>
           <div class="g--8 g-s--12 nudge--left nudge--right no-nudge--s">
-            <p>Enjoys teamwork and interaction, and creates entusiasm for the result to be satisfactory in the assigned tasks</p>
+            <p>Enjoys teamwork and interaction, and creates enthusiasm for the result to be satisfactory in the assigned tasks</p>
           </div>
         </div>
         <div class="g--12 container container--wrap--s">
@@ -308,7 +308,7 @@
             <h3>Build and improve software development teams</h3>
           </div>
           <div class="g--8 g-s--12 nudge--left nudge--right no-nudge--s">
-            <p>Build and improve high performing, high quality, result oriented interdisciplinary teams</p>
+            <p>Build and improve high performing, high quality, result oriented, interdisciplinary teams</p>
           </div>
         </div>
         <div class="g--12 container container--wrap--s noScreen">
