Traduciendo versión impresa

--- a/english.html
+++ b/english.html
@@ -132,7 +132,7 @@
             height="200">
           </amp-img>
         <h1 class="no-margin-vertical">Iván Quiñones</h1>
-        <a href="https://mcclone2001.github.io"><i class="fas fa-language"></i> Español</a>
+        <a href="https://mcclone2001.github.io"><i class="fas fa-language"></i> ¿Español?</a>
       </div>
       <div class="m--1 g--10 no-margin-vertical"><a href="#educacion">Education</a></div>
       <div class="m--1 g--10 no-margin-vertical"><a href="#experiencia">Experience</a></div>
@@ -171,7 +171,7 @@
 
       <a id="experiencia"></a>
       <div class="g--10 m--1 card ">
-        <h2><i class="fas fa-award"></i> Experience as Development Lead</h2>
+        <h2><i class="fas fa-award"></i> Experience as Software Development Lead</h2>
         <div class="g--12 container container--wrap--s">
           <div class="g--4 g-s--12 text-center">
             2017 - Now
@@ -187,7 +187,7 @@
             2011 - 2016
           </div>
           <div class="g--8 g-s--12 nudge--left nudge--right no-nudge--s">
-            <h3>ERP in-house to control warehouses, inventories, POS, accounting, clients, etc.</h3>
+            <h3>ERP in-house to manage warehouses, inventories, POS, accounting, clients, etc.</h3>
             <p>For "Comercializadora de Pinturas y Complementos", a Comex distribuitor in Chiapas</p>
             <p>Leading 5 developers</p>
           </div>
@@ -351,7 +351,7 @@
         <div class="g--11 m--1 no-margin-vertical">
           <p>Computing Systems Engineering<br/>
           Masters in Computing Sciences<br/>
-          Certificado SCRUM Master</p>
+          Certified SCRUM Master</p>
         </div>
       </div>
       <div class="g--12 no-margin-vertical">
@@ -360,31 +360,31 @@
         </div>        
         <div class="g--11 m--1 no-margin-vertical">
           <div class="g--12 no-margin-vertical">
-              <h4 class="inline">Plataforma de distribución de servicios turísticos</h4> <span class="subtitle">2017 - Actual</span>
-              <p>Para importante empresa del ramo turístico mexicano<br/>
-              Dirigiendo 17 desarrolladores in situ y remotos</p>
+              <h4 class="inline">Tourism Services Distribution Platform</h4> <span class="subtitle">2017 - Now</span>
+              <p>For an important tourism company in the mexican southwest<br/>
+              Leading 17 developers in site and remote</p>
           </div>
           <div class="g--12 no-margin-vertical">
-              <h4 class="inline">ERP inhouse para controlar almacenes, POS, contabilidad, cartera de clientes, etc.</h4> <span class="subtitle">2011 - 2016</span>
-              <p>Para Grupo Copico, distribuidor de Comex en Chiapas<br/>
-              Dirigiendo 5 desarrolladores</p>
+              <h4 class="inline">ERP in-house to manage warehouses, inventories, POS, accounting, clients, etc.</h4> <span class="subtitle">2011 - 2016</span>
+              <p>For "Comercializadora de Pinturas y Complementos", a Comex distribuitor in Chiapas<br/>
+              Leading 5 developers</p>
           </div>
           <div class="g--12 no-margin-vertical">
-              <h4 class="inline">Kioskos de información turística para la Secretaría de Turismo del Estado de Chiapas</h4> <span class="subtitle">2009 - 2010</span>
-              <p>Para Votia Consultoría y Soluciones<br/>
-              Dirigiendo 4 desarrolladores</p>
+              <h4 class="inline">Touristic Information Kiosks for "Secretaría de Turismo del Estado de Chiapas"</h4> <span class="subtitle">2009 - 2010</span>
+              <p>For "Votia Consultoría y Soluciones" a consulting firm in Chiapas<br/>
+              Leading 4 developers</p>
           </div>
           <div class="g--12 no-margin-vertical">
-              <h4 class="inline">Portal publicitario de comercio local y regional</h4> <span class="subtitle">2008</span>
-              <p>Para Negotia Impulsora de Negocios<br/>
-              Dirigiendo 4 desarrolladores</p>
+              <h4 class="inline">Web portal to promote local businesses in Chiapas</h4> <span class="subtitle">2008</span>
+              <p>For "Negotia Impulsora de Negocios"<br/>
+              Leading 4 developers</p>
             </div>
           </div>
         </div>
 
         <div class="g--12 no-margin-vertical">
           <div class="g--12 no-margin-vertical">
-            <h3><i class="fas fa-tools"></i> Herramientas preferidas</h3>
+            <h3><i class="fas fa-tools"></i> Methodology and Tooling</h3>
           </div>
           <div class="g--11 m--1 container no-margin-vertical">
             <div class="tile g--2 no-margin-vertical">LAMP</div>
