Agregando link al blog
Agregando link al blog desde el home

--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
       <div class="m--1 g--10 no-margin-vertical"><a href="#personalidad">Personalidad</a></div>
       <div class="m--1 g--10 no-margin-vertical"><a href="#alcance">¿Qué puede hacer?</a></div>
       <div class="m--1 g--10 no-margin-vertical"><a href="#contacto">Contacto</a></div>
+      <div class="m--1 g--10 no-margin-vertical"><a href="https://mcclone2001.github.io/blog/">Blog</a></div>
     </aside>
 
     <main class="g--10 m--2 g-m--12 m-m--0 no-margin-vertical noPrint">
