--- a/english.html
+++ b/english.html
@@ -141,6 +141,7 @@
       <div class="m--1 g--10 no-margin-vertical"><a href="#personalidad">Traits of Personality</a></div>
       <div class="m--1 g--10 no-margin-vertical"><a href="#alcance">What can he do?</a></div>
       <div class="m--1 g--10 no-margin-vertical"><a href="#contacto">Contact Information</a></div>
+      <div class="m--1 g--10 no-margin-vertical"><a href="https://mcclone2001.github.io/blog/">Blog (in spanish)</a></div>
     </aside>
 
     <main class="g--10 m--2 g-m--12 m-m--0 no-margin-vertical noPrint">
