--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@
           <div class="tile bg--asphalt color--white">PHP</div>
           <div class="tile bg--midnight-blue color--white">Laravel</div>
           <div class="tile bg--asphalt color--white">Vue.Js</div>
+          <div class="tile bg--asphalt color--white">React.Js</div>
           <div class="tile bg--midnight-blue color--white">JQuery</div>
           <div class="tile bg--asphalt color--white">SQL</div>
           <div class="tile bg--midnight-blue color--white">MariaDB</div>
