--- a/english.html
+++ b/english.html
@@ -175,7 +175,17 @@
         <h2><i class="fas fa-award"></i> Experience as Software Development Lead</h2>
         <div class="g--12 container container--wrap--s">
           <div class="g--4 g-s--12 text-center">
-            2017 - Now
+            2019 - Now
+          </div>
+          <div class="g--8 g-s--12 nudge--left nudge--right no-nudge--s">
+            <h3>Electronic Health Record</h3>
+            <p>Ecaresoft</p>
+            <p>Leading 7~10 developers remotely</p>
+          </div>
+        </div>
+        <div class="g--12 container container--wrap--s">
+          <div class="g--4 g-s--12 text-center">
+            2017 - 2019
           </div>
           <div class="g--8 g-s--12 nudge--left nudge--right no-nudge--s">
             <h3>Tourism Services Distribution Platform</h3>
@@ -219,18 +229,19 @@
       <div class="g--10 m--1 card">
         <h2><i class="fas fa-tools"></i> Tooling</h2>
         <div class="g--8 m--4 g-t--10 m-t--1">
+          <div class="tile bg--asphalt-blue color--white">Ruby on Rails</div>
           <div class="tile bg--midnight-blue color--white">LAMP</div>
           <div class="tile bg--asphalt color--white">PHP</div>
           <div class="tile bg--midnight-blue color--white">Laravel</div>
           <div class="tile bg--asphalt color--white">Vue.Js</div>
-          <div class="tile bg--asphalt color--white">React.Js</div>
-          <div class="tile bg--midnight-blue color--white">JQuery</div>
-          <div class="tile bg--asphalt color--white">SQL</div>
-          <div class="tile bg--midnight-blue color--white">MariaDB</div>
-          <div class="tile bg--asphalt color--white">REST</div>
-          <div class="tile bg--midnight-blue color--white">Jenkins</div>
-          <div class="tile bg--asphalt color--white">Ansible</div>
-          <div class="tile bg--midnight-blue color--white">Docker</div>
+          <div class="tile bg--midnight color--white">React.Js</div>
+          <div class="tile bg--asphalt-blue color--white">JQuery</div>
+          <div class="tile bg--midnight color--white">SQL</div>
+          <div class="tile bg--asphalt-blue color--white">MariaDB</div>
+          <div class="tile bg--midnight color--white">REST</div>
+          <div class="tile bg--asphalt-blue color--white">Jenkins</div>
+          <div class="tile bg--midnight color--white">Ansible</div>
+          <div class="tile bg--asphalt-blue color--white">Docker</div>
         </div>
       </div>
 
