Updating printed version

--- a/english.html
+++ b/english.html
@@ -373,7 +373,12 @@
         </div>        
         <div class="g--11 m--1 no-margin-vertical">
           <div class="g--12 no-margin-vertical">
-              <h4 class="inline">Tourism Services Distribution Platform</h4> <span class="subtitle">2017 - Now</span>
+              <h4 class="inline">Electronic Health Record</h4> <span class="subtitle">2019 - Now</span>
+              <p>Ecaresoft<br/>
+              Leading 7~10 developers remotely</p>
+          </div>
+          <div class="g--12 no-margin-vertical">
+              <h4 class="inline">Tourism Services Distribution Platform</h4> <span class="subtitle">2017 - 2019</span>
               <p>For an important tourism company in the mexican southwest<br/>
               Leading 17 developers in site and remote</p>
           </div>
