Putting more sauce to the tacos

--- a/english.html
+++ b/english.html
@@ -178,8 +178,8 @@
             2019 - Now
           </div>
           <div class="g--8 g-s--12 nudge--left nudge--right no-nudge--s">
-            <h3>Electronic Health Record</h3>
-            <p>Ecaresoft</p>
+            <h3>Electronic Health Record, Medical Agenda, Revenue Cycle Management and more on the Cloud</h3>
+            <p>Nimbo-x.com at Ecaresoft</p>
             <p>Leading 7~10 developers remotely</p>
           </div>
         </div>
@@ -373,8 +373,8 @@
         </div>        
         <div class="g--11 m--1 no-margin-vertical">
           <div class="g--12 no-margin-vertical">
-              <h4 class="inline">Electronic Health Record</h4> <span class="subtitle">2019 - Now</span>
-              <p>Ecaresoft<br/>
+              <h4 class="inline">Electronic Health Record, Medical Agenda, Revenue Cycle Management and more on the Cloud</h4> <span class="subtitle">2019 - Now</span>
+              <p>Nimbo-x.com at Ecaresoft<br/>
               Leading 7~10 developers remotely</p>
           </div>
           <div class="g--12 no-margin-vertical">
