--- a/english.html
+++ b/english.html
@@ -402,19 +402,24 @@
 
         <div class="g--12 no-margin-vertical">
           <div class="g--12 no-margin-vertical">
-            <h3><i class="fas fa-tools"></i> Methodology and Tooling</h3>
+            <h3><i class="fas fa-tools"></i> Tooling (Buzzwords and cliches but I know how and when to use them to acomplish the goals)</h3>
           </div>
           <div class="g--11 m--1 container no-margin-vertical">
-            <div class="tile g--2 no-margin-vertical">LAMP</div>
-            <div class="tile g--2 no-margin-vertical">Laravel</div>
-            <div class="tile g--2 no-margin-vertical">Vue.Js</div>
             <div class="tile g--2 no-margin-vertical">REST</div>
             <div class="tile g--2 no-margin-vertical">SCRUM</div>
             <div class="tile g--2 no-margin-vertical">Lean</div>
-            <div class="tile g--2 no-margin-vertical">SOLID</div>
-            <div class="tile g--2 no-margin-vertical">Microservices</div>
             <div class="tile g--2 no-margin-vertical">YAGNI</div>
             <div class="tile g--2 no-margin-vertical">DevOps</div>
+            <div class="tile g--2 no-margin-vertical">Shape Up (by Basecamp)</div><br/>
+            <div class="tile g--2 no-margin-vertical">SOLID</div>
+            <div class="tile g--2 no-margin-vertical">LAMP</div>
+            <div class="tile g--2 no-margin-vertical">Microservices</div>
+            <div class="tile g--2 no-margin-vertical">Heroku</div>
+            <div class="tile g--2 no-margin-vertical">AWS</div>
+            <div class="tile g--2 no-margin-vertical">Ruby on Rails</div><br/>
+            <div class="tile g--2 no-margin-vertical">Laravel</div>
+            <div class="tile g--2 no-margin-vertical">Vue.Js</div>
+            <div class="tile g--2 no-margin-vertical">React.Js</div>
           </div>
         </div>
 
