Adding Predictive Index and Humantelligence

--- a/english.html
+++ b/english.html
@@ -402,7 +402,7 @@
 
         <div class="g--12 no-margin-vertical">
           <div class="g--12 no-margin-vertical">
-            <h3><i class="fas fa-tools"></i> Tooling (Buzzwords and cliches but I know how and when to use them to acomplish the goals)</h3>
+            <h3><i class="fas fa-tools"></i> Tooling</h3>
           </div>
           <div class="g--11 m--1 container no-margin-vertical">
             <div class="tile g--2 no-margin-vertical">REST</div>
@@ -414,12 +414,44 @@
             <div class="tile g--2 no-margin-vertical">SOLID</div>
             <div class="tile g--2 no-margin-vertical">LAMP</div>
             <div class="tile g--2 no-margin-vertical">Microservices</div>
+          </div>
+          <div class="g--11 m--1 container no-margin-vertical">
             <div class="tile g--2 no-margin-vertical">Heroku</div>
             <div class="tile g--2 no-margin-vertical">AWS</div>
             <div class="tile g--2 no-margin-vertical">Ruby on Rails</div><br/>
             <div class="tile g--2 no-margin-vertical">Laravel</div>
             <div class="tile g--2 no-margin-vertical">Vue.Js</div>
             <div class="tile g--2 no-margin-vertical">React.Js</div>
+          </div>
+        </div>
+      
+        <div class="g--12 no-margin-vertical">
+          <div class="g--12 no-margin-vertical">
+            <h3><i class="fa-solid fa-brain"></i> Traits of personality according to Predictive Index: Strategist</h3>
+          </div>
+          <div class="g--11 m--1 container no-margin-vertical">
+            <div class="tile g--2 no-margin-vertical">Communication: Reserved, introspective, authoritative</div>
+            <div class="tile g--2 no-margin-vertical">Delegation: Delegates details more freely than authority, but tight with both. Controlling with frequent check-ins</div>
+            <div class="tile g--2 no-margin-vertical">Decision making: Decisive, results-oriented</div>
+            <div class="tile g--2 no-margin-vertical">Action & risk: Innovative, self-motivated. Calculated risk-taker</div>
+            <div class="tile g--2 no-margin-vertical">Strengths: Able to think big picture and anticipate problems. Able to deal with pressure and multiple priorities. Organized and thorough follow-up</div>
+            <div class="tile g--2 no-margin-vertical">Traps: May appear tough-minded and directive. May be intolerant of delays or stagnant environments. May be seen as a perfectionist</div><br/>
+          </div>
+        </div>
+      
+        <div class="g--12 no-margin-vertical">
+          <div class="g--12 no-margin-vertical">
+            <h3><i class="fa-solid fa-brain"></i> Traits of personality according to Humantelligence: Scholar, Maverick, Architect</h3>
+          </div>
+          <div class="g--11 m--1 container no-margin-vertical">
+            <div class="tile g--2 no-margin-vertical">Steady behaviour: Invests in relationships and follows through on commitments. Remains cool under pressure and likes helping others</div>
+            <div class="tile g--2 no-margin-vertical">- Tends to approach work in a controlled, deliberate manner. Strives to create predictability</div>
+            <div class="tile g--2 no-margin-vertical">Reflective behavior: Listens carefully before responding and draws logical conclusions. Controls emotions and remains calm under pressure</div>
+            <div class="tile g--2 no-margin-vertical">- Tends to meet new people in a more quiet, thoughtful and emotionally controlled manner. Prefers logic over emotions</div>
+            <div class="tile g--2 no-margin-vertical">Knowledge motivator: Has a very strong desire for learning, even for its own sake. Extremely curious and thrives on intellectual challenges</div>
+            <div class="tile g--2 no-margin-vertical">- Shows a high degree of curiosity. Enjoys learning for learning’s sake</div>
+            <div class="tile g--2 no-margin-vertical">Freedom motivator: Values creativity over following established procedures. Likes to bring new ideas and adapts to change.</div>
+            <div class="tile g--2 no-margin-vertical">- Adaptable to new situations. Sets new precedent when necessary</div>
           </div>
         </div>
 
