--- a/english.html
+++ b/english.html
@@ -362,14 +362,12 @@
           <h3><i class="fas fa-university"></i> Education</h3>
         </div>
         <div class="g--11 m--1 no-margin-vertical">
-          <p>Computing Systems Engineering<br/>
-          Masters in Computing Sciences<br/>
-          Certified SCRUM Master</p>
+          <p>Computing Systems Engineering. Masters in Computing Sciences. Certified SCRUM Master</p>
         </div>
       </div>
       <div class="g--12 no-margin-vertical">
         <div class="g--12 no-margin-vertical">
-          <h3><i class="fas fa-award"></i> Experience as Software Development Lead</h3>
+          <h3><i class="fas fa-award"></i> 14 Years of Experience as Software Development Lead</h3>
         </div>        
         <div class="g--11 m--1 no-margin-vertical">
           <div class="g--12 no-margin-vertical">
@@ -388,14 +386,8 @@
               Leading 5 developers</p>
           </div>
           <div class="g--12 no-margin-vertical">
-              <h4 class="inline">Touristic Information Kiosks for "Secretaría de Turismo del Estado de Chiapas"</h4> <span class="subtitle">2009 - 2010</span>
-              <p>For "Votia Consultoría y Soluciones" a consulting firm in Chiapas<br/>
-              Leading 4 developers</p>
-          </div>
-          <div class="g--12 no-margin-vertical">
-              <h4 class="inline">Web portal to promote local businesses in Chiapas</h4> <span class="subtitle">2008</span>
-              <p>For "Negotia Impulsora de Negocios"<br/>
-              Leading 4 developers</p>
+              <h4 class="inline">Others</h4> <span class="subtitle">2008-2011</span>
+              <p>Leading ~4 developers</p>
             </div>
           </div>
         </div>
@@ -410,7 +402,7 @@
             <div class="tile g--2 no-margin-vertical">Lean</div>
             <div class="tile g--2 no-margin-vertical">YAGNI</div>
             <div class="tile g--2 no-margin-vertical">DevOps</div>
-            <div class="tile g--2 no-margin-vertical">Shape Up (by Basecamp)</div><br/>
+            <div class="tile g--2 no-margin-vertical">Shape Up</div><br/>
             <div class="tile g--2 no-margin-vertical">SOLID</div>
             <div class="tile g--2 no-margin-vertical">LAMP</div>
             <div class="tile g--2 no-margin-vertical">Microservices</div>
@@ -427,7 +419,7 @@
       
         <div class="g--12 no-margin-vertical">
           <div class="g--12 no-margin-vertical">
-            <h3><i class="fa-solid fa-brain"></i> Traits of personality according to Predictive Index: Strategist</h3>
+            <h3><i class="fa-solid fa-brain pagebreak"></i> Traits of personality according to Predictive Index: Strategist</h3>
           </div>
           <div class="g--11 m--1 container no-margin-vertical">
             <div class="tile g--2 no-margin-vertical">Communication: Reserved, introspective, authoritative</div>
